--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@ button { cursor: pointer; padding: 6px 10px; border-radius: 6px; border: 1px sol
 <script>
 // ===== おみくじ・スケジュール =====
 const scheduleData = {
-  'today': { date: '1日目', content: '<div>06時50分：バス（3号車）に集合＠大甕駅東口信号渡る</div><div>11時45分：羽田空港発</div><div>14時25分：那覇空港着</div><div>15時30分：平和祈念公園</div><div>17時00分～19時30分：国際通り</div><div>20時00分：ホテル着</div><div>22時30分：点呼</div>' },
+  'today': { date: '1日目', content: '<div>06時50分：バス（5号車）に集合＠大甕駅東口信号渡る</div><div>11時45分：羽田空港発</div><div>14時25分：那覇空港着</div><div>15時30分：平和祈念公園</div><div>17時00分～19時30分：国際通り</div><div>20時00分：ホテル着</div><div>22時30分：点呼</div>' },
 
  'tomorrow': { date: '2日目', content: '<div>06時00分：起床</div><div>06時50分：スーツケース積込</div><div>07時00分：朝食「守礼の間」</div><div>08時00分：バス出発</div><div>09時30分～12時30分：おきなわ世界塾</div><div>昼食はバスの中でお弁当配布</div><div>15時00分：本部港発</div><div>15時00分：伊江港着</div><div>入島式は民泊班ごとに整列</div>' },
 
@@ -179,7 +179,7 @@ const scheduleData = {
  
   'notice': { date: '4日目', content: '<div>起床</div><div>06時50分：スーツケース積込</div><div>07時00分：朝食「3階ウマンチュ&マジュン」</div><div>08時30分：出発</div><div>09時30分～10時30分：首里城公園（クラス写真）</div><div>12時15分：那覇空港発</div><div>昼食は機内でお弁当配布</div><div>14時30分：羽田空港着</div><div>18時00分：友部SA着（買い物禁止）</div><div>18時00分：学校南駐車場着</div>' },
 
- 'xmas': { date: '諸連絡', content: '<div>【緊急】050-7100-1877</div><div>【Classi】スマホにインストールして通知はオン</div>' },
+ 'xmas': { date: '諸連絡', content: '<div>【緊急】050-7100-1877</div><div>【Classi】スマホにインストールして通知はオン</div><div>【防寒着】防寒着を「行きのバス」に預ける場合は「自分のものである目印」が必要。ポケットに紙を入れておくとか。</div>' },
 
 
  'stay1': { date: '諸連絡', content: '<div>【605】802,819,822</div><div>【606】801,803,829</div><div>【607】806,807,821</div><div>【608】805,811,831</div><div>【609】804,808,809</div><div>【610】825,814</div><div>【717】823,824,820</div><div>【718】830,818,834</div><div>【719】815,810,816</div><div>【720】832,812,813</div><div>【721】826,828,833</div>' },
