Update schedule data with uniform details

--- a/index.html
+++ b/index.html
@@ -119,13 +119,13 @@ header { display: flex; align-items: center; gap: 12px; margin-bottom: 8px; }
 <script>
 // ===== おみくじ・スケジュール =====
 const scheduleData = {
-  'today': { date: '1日目', content: '<div>06時50分：バス（5号車）に集合＠大甕駅東口信号渡る</div><div>11時45分：羽田空港発</div><div>14時25分：那覇空港着</div><div>15時30分：平和祈念公園</div><div>17時00分～19時30分：国際通り</div><div>20時00分：ホテル着</div><div>22時30分：点呼</div>' },
+  'today': { date: '1日目（制服着用）', content: '<div>06時50分：バス（5号車）に集合＠大甕駅東口信号渡る</div><div>11時45分：羽田空港発</div><div>14時25分：那覇空港着</div><div>15時30分：平和祈念公園</div><div>17時00分～19時30分：国際通り</div><div>20時00分：ホテル着</div><div>22時30分：点呼</div>' },
 
- 'tomorrow': { date: '2日目', content: '<div>06時00分：起床</div><div>06時50分：スーツケース積込</div><div>07時00分：朝食「守礼の間」</div><div>08時00分：バス出発</div><div>09時30分～12時30分：おきなわ世界塾</div><div>昼食はバスの中でお弁当配布</div><div>15時00分：本部港発</div><div>15時00分：伊江港着</div><div>入島式は民泊班ごとに整列</div>' },
+ 'tomorrow': { date: '2日目（私服着用）', content: '<div>06時00分：起床</div><div>06時50分：スーツケース積込</div><div>07時00分：朝食「守礼の間」</div><div>08時00分：バス出発（私服）</div><div>09時30分～12時30分：おきなわ世界塾</div><div>昼食はバスの中でお弁当配布</div><div>15時00分：本部港発</div><div>15時00分：伊江港着</div><div>入島式は民泊班ごとに整列</div>' },
 
-  'following': { date: '3日目', content: '<div>マリン体験や家業体験</div><div>昼食は各家庭</div><div>13時00分：伊江港発</div><div>13時30分：本部港着</div><div>14時10分～16時40分：美ら海水族館（クラス写真）</div><div>15時40分：ホテル着</div><div>18時20分～21時00分：夕食＋ライブ</div><div>22時35分：点呼</div>' },
+  'following': { date: '3日目（私服着用）', content: '<div>マリン体験や家業体験</div><div>昼食は各家庭</div><div>13時00分：伊江港発</div><div>13時30分：本部港着</div><div>14時10分～16時40分：美ら海水族館（クラス写真）</div><div>15時40分：ホテル着</div><div>18時20分～21時00分：夕食＋ライブ</div><div>22時35分：点呼</div>' },
  
-  'notice': { date: '4日目', content: '<div>起床</div><div>06時50分：スーツケース積込</div><div>07時00分：朝食「3階ウマンチュ&マジュン」</div><div>08時30分：出発</div><div>09時30分～10時30分：首里城公園</div><div>12時15分：那覇空港発</div><div>昼食は機内でお弁当配布</div><div>14時30分：羽田空港着</div><div>18時00分：友部SA着（買い物禁止）</div><div>18時00分：学校南駐車場着</div>' },
+  'notice': { date: '4日目（制服着用）', content: '<div>起床</div><div>06時50分：スーツケース積込</div><div>07時00分：朝食「3階ウマンチュ&マジュン」</div><div>08時30分：出発</div><div>09時30分～10時30分：首里城公園</div><div>12時15分：那覇空港発</div><div>昼食は機内でお弁当配布</div><div>14時30分：羽田空港着</div><div>18時00分：友部SA着（買い物禁止）</div><div>18時00分：学校南駐車場着</div>' },
 
  'xmas': { date: '諸連絡', content: '<div>【緊急】050-7100-1877</div><div>【Classi】スマホにインストールして通知はオン</div><div>【防寒着】防寒着を「行きのバス」に預ける場合は「自分のものである目印」が必要。ポケットに紙を入れておくとか。</div>' },
 
