--- a/index.html
+++ b/index.html
@@ -87,10 +87,10 @@ header { display: flex; align-items: center; gap: 12px; margin-bottom: 8px; }
 
 <!-- --- スケジュール --- -->
 <div class="date-buttons">
- <button class="date-button fancy-btn fancy-blue" onclick="showSchedule('today')">12/3（水）制服着用</button>
-  <button class="date-button fancy-btn fancy-blue" onclick="showSchedule('tomorrow')">12/4（木）私服着用</button>
-  <button class="date-button fancy-btn fancy-blue" onclick="showSchedule('following')">12/5（金）私服着用</button>
-  <button class="date-button fancy-btn fancy-blue" onclick="showSchedule('notice')">12/6（土）制服着用</button>
+ <button class="date-button fancy-btn fancy-blue" onclick="showSchedule('today')">12/3（水）制服</button>
+  <button class="date-button fancy-btn fancy-blue" onclick="showSchedule('tomorrow')">12/4（木）私服</button>
+  <button class="date-button fancy-btn fancy-blue" onclick="showSchedule('following')">12/5（金）私服</button>
+  <button class="date-button fancy-btn fancy-blue" onclick="showSchedule('notice')">12/6（土）制服</button>
 <button class="date-button fancy-btn fancy-blue" onclick="showSchedule('xmas')">諸連絡</button>
 
  <button class="date-button fancy-btn fancy-blue" onclick="showSchedule('stay1')">1泊目</button>
