--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@ const scheduleData = {
 
 const omikujiResults = [
   {name:'大狂',text:'ウミガメに膝カックンされる'},
-  {name:'凶',text:'水鉄砲で撃たれる'},
+  {name:'凶',text:'ジンベイザメに頭をかじられる'},
   {name:'吉',text:'脳みそ絶対零度'},
   {name:'小吉',text:'赤津先生と睨めっこ'},
   {name:'中吉',text:'こんにちは、名桜大学'},
