--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@ const scheduleData = {
  
   'notice': { date: '4日目', content: '<div>起床</div><div>06時50分：スーツケース積込</div><div>07時00分：朝食「3階ウマンチュ&マジュン」</div><div>08時30分：出発</div><div>09時30分～10時30分：首里城公園</div><div>12時15分：那覇空港発</div><div>昼食は機内でお弁当配布</div><div>14時30分：羽田空港着</div><div>18時00分：友部SA着（買い物禁止）</div><div>18時00分：学校南駐車場着</div>' },
 
- 'xmas': { date: '緊急', content: '<div>【緊急】050-7100-1877</div><div>杉浦【501】/【522】</div><div>藤本【524】/【514】</div><div>赤津【611】/【515】</div><div>萩谷【612】/【503】</div><div>宇佐美【613】/【523】</div><div>阿久津【614】/【536】</div><div>一瀬【701】/【616】</div><div>小圷【702】/【602】</div><div>大森【723】/【621】</div><div>新井【724】/【603】</div>' },
+ 'xmas': { date: '緊急', content: '<div>【緊急】050-7100-1877</div><div>杉浦【522】</div><div>藤本【514】</div><div>赤津【515】</div><div>萩谷【503】</div><div>宇佐美【523】</div><div>阿久津【536】</div><div>一瀬【616】</div><div>小圷【602】</div><div>大森【621】</div><div>新井【603】</div>' },
 
  'stay1': { date: '1泊目', content: '<div>【605】802,819,822</div><div>【606】801,803,829</div><div>【607】806,821</div><div>【608】805,811,831</div><div>【609】804,808,809</div><div>【610】825,814</div><div>【717】823,824,820</div><div>【718】830,818,834</div><div>【719】815,810</div><div>【720】832,812,813</div><div>【721】826,828,833</div>' },
 
