--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@ const scheduleData = {
 
   'following': { date: '3日目', content: '<div>マリン体験や家業体験</div><div>昼食は各家庭</div><div>13時00分：伊江港発</div><div>13時30分：本部港着</div><div>14時10分～16時40分：美ら海水族館（クラス写真）</div><div>17時40分：ホテル着</div><div>18時20分～21時00分：夕食＋ライブ</div><div>22時35分：点呼</div>' },
  
-  'notice': { date: '4日目', content: '<div>起床</div><div>06時50分：スーツケース積込</div><div>07時00分：朝食「3階ウマンチュ&マジュン」</div><div>08時30分：出発</div><div>09時30分～10時30分：首里城公園</div><div>12時15分：那覇空港発</div><div>昼食は機内でお弁当配布</div><div>14時30分：羽田空港着</div><div>18時00分：友部SA着（買い物禁止）</div><div>18時00分：学校南駐車場着</div>' },
+  'notice': { date: '4日目', content: '<div>起床</div><div>06時50分：スーツケース積込</div><div>07時00分：朝食「3階ウマンチュ&マジュン」</div><div>08時30分：出発</div><div>09時30分～10時30分：首里城公園</div><div>12時15分：那覇空港発</div><div>昼食は機内でお弁当配布</div><div>14時30分：羽田空港着</div><div>18時00分：学校南駐車場着</div>' },
 
  'xmas': { date: '緊急', content: '<div>【緊急】050-7100-1877</div><div>杉浦【522】</div><div>藤本【514】</div><div>赤津【515】</div><div>萩谷【503】</div><div>宇佐美【523】</div><div>阿久津【536】</div><div>一瀬【616】</div><div>小圷【602】</div><div>大森【621】</div><div>新井【603】</div>' },
 
